--- a/calculadora.html
+++ b/calculadora.html
@@ -32,8 +32,7 @@
         <div class="container">
             <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
-                aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS" aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -164,28 +163,20 @@
                         <h2>Calculadora de Hipoteca</h2>
                         <form id="hipoteca-form">
                             <div class="mb-3">
-                                <label for="value" class="form-label">Valor hipotecario en euros <span
-                                        class="text-danger">*</span></label>
-                                <input type="number" class="form-control form-control-sm input-short" id="value"
-                                    required>
+                                <label for="value" class="form-label">Valor hipotecario en euros <span class="text-danger">*</span></label>
+                                <input type="number" class="form-control form-control-sm input-short" id="value" aria-label="Valor hipotecario" required>
                             </div>
                             <div class="mb-3">
-                                <label for="savings" class="form-label">Ahorro aportado en euros <span
-                                        class="text-danger">*</span></label>
-                                <input type="number" class="form-control form-control-sm input-short" id="savings"
-                                    required>
+                                <label for="savings" class="form-label">Ahorro aportado en euros <span class="text-danger">*</span></label>
+                                <input type="number" class="form-control form-control-sm input-short" id="savings" aria-label="Ahorro aportado" required>
                             </div>
                             <div class="mb-3">
-                                <label for="years" class="form-label">Plazo en años <span
-                                        class="text-danger">*</span></label>
-                                <input type="number" class="form-control form-control-sm input-short" id="years"
-                                    required>
+                                <label for="years" class="form-label">Plazo en años <span class="text-danger">*</span></label>
+                                <input type="number" class="form-control form-control-sm input-short" id="years" aria-label="Plazo en años" required>
                             </div>
                             <div class="mb-3">
-                                <label for="interest" class="form-label">Interés en porcentaje <span
-                                        class="text-danger">*</span></label>
-                                <input type="number" class="form-control form-control-sm input-short" id="interest"
-                                    required>
+                                <label for="interest" class="form-label">Interés en porcentaje <span class="text-danger">*</span></label>
+                                <input type="number" class="form-control form-control-sm input-short" id="interest" aria-label="Interés en porcentaje" required>
                             </div>
                             <button type="submit" class="btn btn-primary">Calcular</button>
                         </form>
