--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
             <div class="collapse navbar-collapse" id="navbarS">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a href="#" class="nav-link active" aria-current="page">Inicio</a>
+                        <a href="#" class="nav-link active" aria-current="page" aria-label="Inicio">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="calculadora.html" class="nav-link">Calcula tu hipoteca</a>
+                        <a href="calculadora.html" class="nav-link" aria-label="Calcula tu hipoteca">Calcula tu hipoteca</a>
                     </li>
                    <li class="nav-item">
-                        <a href="sobreNosotros.html" class="nav-link">Sobre Nosotros</a>
+                    <a href="sobreNosotros.html" class="nav-link" aria-label="Sobre Nosotros">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a href="gestionaPropiedad.html" class="nav-link">Gestiona tu propiedad</a>
+                        <a href="gestionaPropiedad.html" class="nav-link" aria-label="Gestiona tu propiedad">Gestiona tu propiedad</a>
                     </li>
                 </ul>
             </div>
@@ -69,7 +69,7 @@
 
         <div class="carousel-inner">
 
-            <div class="carousel-item active">
+            <div class="carousel-item active" aria-live="polite" aria-atomic="true">
                 <img src="img/FotosMalaga/malagaInicio.jpg" class="d-block w-100" alt="Imagen de la bahía de Málaga">
                 <div class="carousel-caption">
                     <h5>Bahía de Málaga</h5>
