--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -24,7 +24,7 @@
         <div class="container">
             <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
-                aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
+                    aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarS">
@@ -48,7 +48,7 @@
 
     <!-- PREGUNTAS FRECUENTES -->
 <section class="questions container">
-    <h2 class="subtitle" tabindex="0">Preguntas frecuentes</h2>
+    <h1 class="subtitle" tabindex="0">Preguntas frecuentes</h1>
     <p class="questions_paragraph" tabindex="0">
         A continuación se muestra un listado de preguntas comunes que suelen hacer nuestros usuarios acerca de las
         diferentes posibilidades que ofrecemos, para dar un servicio eficiente y sencillo.
@@ -56,13 +56,13 @@
     <section class="questions__container">
         <article class="questions__padding">
             <div class="questions__answer">
-                <h3 class="questions__title" tabindex="0">
+                <h2 class="questions__title" tabindex="0" role="button" aria-expanded="false">
                     ¿Cómo contacto?
                     <span class="questions__arrow">
                         <i class="questions__i bi bi-arrow-up-short"></i>
                     </span>
-                </h3>
-                <div class="questions__show" tabindex="0" aria-hidden="true">
+                </h2>
+                <div class="questions__show" tabindex="0" aria-hidden="true" role="region">
                     <ul>
                         <li>Si quiere información adicional acerca de un inmueble, dentro del mismo encontrará un formulario de consulta; tras rellenarlo,
                             uno de nuestros miembros se pondrá en contacto con usted.</li>
@@ -77,13 +77,13 @@
 
         <article class="questions__padding">
             <div class="questions__answer">
-                <h3 class="questions__title" tabindex="0">
+                <h2 class="questions__title" tabindex="0" role="button" aria-expanded="false">
                     ¿Cómo busco inmuebles?
                     <span class="questions__arrow">
                         <i class="questions__i bi bi-arrow-up-short"></i>
                     </span>
-                </h3>
-                <div class="questions__show" tabindex="0" aria-hidden="true">
+                </h2>
+                <div class="questions__show" tabindex="0" aria-hidden="true" role="region">
                     <p>
                         En la página <b>"Inicio"</b> podrá encontrar un listado con los inmuebles disponibles. Si desea filtrar la búsqueda para encontrar
                         un tipo de inmueble más específico, podrá hacerlo a través de la barra de búsqueda, donde hay varios filtros y categorías para seleccionar. 
@@ -94,13 +94,13 @@
 
         <article class="questions__padding">
             <div class="questions__answer">
-                <h3 class="questions__title" tabindex="0">
+                <h2 class="questions__title" tabindex="0" role="button" aria-expanded="false">
                     ¿Cómo calculo mi hipoteca?
                     <span class="questions__arrow">
                         <i class="questions__i bi bi-arrow-up-short"></i>
                     </span>
-                </h3>
-                <div class="questions__show" tabindex="0" aria-hidden="true">
+                </h2>
+                <div class="questions__show" tabindex="0" aria-hidden="true" role="region">
                     <p>
                         En la sección <b>"Calculadora de hipoteca"</b> ofrecemos una herramienta que le permitirá simular la cuota mensual de su hipoteca. Tan solo deberá
                         introducir los datos que se le solicitan y la calculadora le mostrará el resultado. Los campos que se requieren vienen explicados en la misma 
