--- a/detalle_piso.html
+++ b/detalle_piso.html
@@ -26,7 +26,8 @@
         <div class="container">
             <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
-                aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
+                     aria-controls="navbarS" aria-expanded="false" aria-label="Botón de alternar navegación">
+        
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarS">
@@ -59,7 +60,7 @@
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="imageModalLabel"></h5>
+                    <h2 class="modal-title" id="imageModalLabel">Imagenes:</h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
                 <div class="modal-body">
