--- a/gestionaPropiedad.html
+++ b/gestionaPropiedad.html
@@ -8,7 +8,7 @@
     <title>Málaga Dream Home</title>
 
     <!--Icono pestaña del navegador-->
-    <link rel="icon" type="favicon2/png" href="./img/favicon2.png">
+    <link rel="icon" type="image/png" href="./img/favicon2.png">
 
     <!-- All CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +23,7 @@
         <div class="container">
             <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
-                aria-controls="navbarS" aria-expanded="false" aria-label="Botón de navegación">
+                    aria-controls="navbarS" aria-expanded="false" aria-label="Botón de navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarS">
@@ -58,14 +58,14 @@
 
   
             <!--BOTÓN AYUDA-->
-            <button class="help-button" onclick="toggleHelp()">
+            <button class="help-button" onclick="toggleHelp()" aria-expanded="false">
                 <span class="help-icon">?</span>
-              </button>
+            </button>
               
               <!-- Contenido de ayuda -->
-              <div class="help-content" id="helpContent" tabindex="0">
-                <p>Todos los campos con el símbolo '*' son obligatorios.Vuelva a  pulsar el Botón,si quiere cerrar el desplegable</p>
-              </div>
+              <div class="help-content" id="helpContent" tabindex="0" aria-live="polite">
+                <p>Todos los campos con el símbolo '*' son obligatorios. Vuelva a pulsar el botón si desea cerrar el desplegable.</p>
+            </div>
             <!--Fin BOTÓN AYUDA !-->
 
             <div class="row m-0">
