--- a/detalle_piso.html
+++ b/detalle_piso.html
@@ -193,46 +193,46 @@
                     <p class="text-white" tabindex="0" aria-label="Descripción: ${pisoSeleccionado.descripcion}">Descripción: ${pisoSeleccionado.descripcion}</p>
                 </div>
             </p>
-            <table class="table" role="table" tabindex="0">
-    <tbody>
-        <tr>
-            <td role="rowheader" tabindex="0">Municipio:</td>
-            <td role="cell" tabindex="0">${pisoSeleccionado.municipio}</td>
-        </tr>
-        <tr>
-            <td role="rowheader" tabindex="0">Distrito:</td>
-            <td role="cell" tabindex="0">${pisoSeleccionado.distrito}</td>
-        </tr>
-        <tr>
-            <td role="rowheader" tabindex="0">Calle:</td>
-            <td role="cell" tabindex="0">${pisoSeleccionado.calle}</td>
-        </tr>
-        <tr>
-            <td role="rowheader" tabindex="0">Nº Habitaciones:</td>
-            <td role="cell" tabindex="0">${pisoSeleccionado.numHabitaciones}</td>
-        </tr>
-        <tr>
-            <td role="rowheader" tabindex="0">Nº Baños:</td>
-            <td role="cell" tabindex="0">${pisoSeleccionado.numBanos}</td>
-        </tr>
-        <tr>
-            <td role="rowheader" tabindex="0">Inmueble:</td>
-            <td role="cell" tabindex="0">${pisoSeleccionado.tipo}</td>
-        </tr>
-        <tr>
-            <td role="rowheader" tabindex="0">Estado:</td>
-            <td role="cell" tabindex="0">${pisoSeleccionado.estado} estado</td>
-        </tr>
-        <tr>
-            <td role="rowheader" tabindex="0">Operación:</td>
-            <td role="cell" tabindex="0">${pisoSeleccionado.operacion == "Ambos" ? "Compra/Alquiler" : pisoSeleccionado.operacion}</td>
-        </tr>
-        <tr>
-            <td role="rowheader" tabindex="0">Superficie:</td>
-            <td role="cell" tabindex="0">${pisoSeleccionado.superficie} metros cuadrados</td>
-        </tr>
-    </tbody>
-</table>
+            <table class="tabla-estilo" role="table" tabindex="0">
+                <tbody>
+                    <tr>
+                        <td id="info" role="rowheader" tabindex="0">Municipio:</td>
+                        <td id="info" role="cell" tabindex="0">${pisoSeleccionado.municipio}</td>
+                    </tr>
+                    <tr>
+                        <td id="info" role="rowheader" tabindex="0">Distrito:</td>
+                        <td id="info" role="cell" tabindex="0">${pisoSeleccionado.distrito}</td>
+                    </tr>
+                    <tr>
+                        <td id="info" role="rowheader" tabindex="0">Calle:</td>
+                        <td id="info" role="cell" tabindex="0">${pisoSeleccionado.calle}</td>
+                    </tr>
+                    <tr>
+                        <td role="rowheader" tabindex="0">Nº Habitaciones:</td>
+                        <td role="cell" tabindex="0">${pisoSeleccionado.numHabitaciones}</td>
+                    </tr>
+                    <tr>
+                        <td role="rowheader" tabindex="0">Nº Baños:</td>
+                        <td role="cell" tabindex="0">${pisoSeleccionado.numBanos}</td>
+                    </tr>
+                    <tr>
+                        <td role="rowheader" tabindex="0">Inmueble:</td>
+                        <td role="cell" tabindex="0">${pisoSeleccionado.tipo}</td>
+                    </tr>
+                    <tr>
+                        <td role="rowheader" tabindex="0">Estado:</td>
+                        <td role="cell" tabindex="0">${pisoSeleccionado.estado} estado</td>
+                    </tr>
+                    <tr>
+                        <td role="rowheader" tabindex="0">Operación:</td>
+                        <td role="cell" tabindex="0">${pisoSeleccionado.operacion == "Ambos" ? "Compra/Alquiler" : pisoSeleccionado.operacion}</td>
+                    </tr>
+                    <tr>
+                        <td role="rowheader" tabindex="0">Superficie:</td>
+                        <td role="cell" tabindex="0">${pisoSeleccionado.superficie} metros cuadrados</td>
+                    </tr>
+                </tbody>
+            </table>
 
             
 
