--- a/detalle_piso.html
+++ b/detalle_piso.html
@@ -124,39 +124,39 @@
         <p>
             <h2 style="margin-left: 10px;" tabindex="0">¿Quiere más información del inmueble? Contacte con nosotros</h2>
          </p>
-            <form action="mailto:iumalagadreamhome@gmail.com" method="post" enctype="text/plain" class="bg-dark p-4 m-auto" novalidate>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="mb-3">
-                            <label for="nombre" class="form-label text-white">Nombre <span class="text-danger">*</span></label>
-                            <input type="text" class="form-control" id="nombre" maxlength="189819" required>
-                            <div class="invalid-feedback">Por favor, ingrese su nombre.</div>
-                        </div>
+         <form action="mailto:iumalagadreamhome@gmail.com" method="post" enctype="text/plain" class="bg-dark p-4 m-auto" novalidate>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label text-white">Nombre <span class="text-danger">*</span></label>
+                        <input type="text" class="form-control" id="nombre" aria-required="true" maxlength="189819" required>
+                        <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese su nombre.</div>
                     </div>
-                    <div class="col-md-12">
-                        <div class="mb-3">
-                            <label for="telefono" class="form-label text-white">Teléfono <span class="text-danger">*</span></label>
-                            <input type="tel" class="form-control" id="telefono" pattern="\d{9}" maxlength="9" required>
-                            <div class="invalid-feedback">Por favor, ingrese un teléfono válido de 9 dígitos.</div>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="mb-3">
-                            <label for="correo" class="form-label text-white">Correo <span class="text-danger">*</span></label>
-                            <input type="email" class="form-control" id="correo" maxlength="320" required>
-                            <div class="invalid-feedback">Por favor, ingrese un correo electrónico válido.</div>
-                        </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="mb-3">
-                            <label for="mensaje" class="form-label text-white">Mensaje <span class="text-danger">*</span></label>
-                            <textarea class="form-control" id="mensaje" rows="3" required></textarea>
-                            <div class="invalid-feedback">Por favor, ingrese su mensaje.</div>
-                        </div>
-                    </div>
-                    <button id="submit-btn" class="btn btn-primary btn-lg btn-block mt-3" type="submit">Enviar</button>
                 </div>
-            </form>
+                <div class="col-md-12">
+                    <div class="mb-3">
+                        <label for="telefono" class="form-label text-white">Teléfono <span class="text-danger">*</span></label>
+                        <input type="tel" class="form-control" id="telefono" aria-required="true" pattern="\d{9}" maxlength="9" required>
+                        <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese un teléfono válido de 9 dígitos.</div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="mb-3">
+                        <label for="correo" class="form-label text-white">Correo <span class="text-danger">*</span></label>
+                        <input type="email" class="form-control" id="correo" aria-required="true" maxlength="320" required>
+                        <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese un correo electrónico válido.</div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="mb-3">
+                        <label for="mensaje" class="form-label text-white">Mensaje <span class="text-danger">*</span></label>
+                        <textarea class="form-control" id="mensaje" aria-required="true" rows="3" required></textarea>
+                        <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese su mensaje.</div>
+                    </div>
+                </div>
+                <button id="submit-btn" class="btn btn-primary btn-lg btn-block mt-3" type="submit">Enviar</button>
+            </div>
+        </form>
         </div>
     </div>
 
