--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="filtro-precio">
             <label for="filtroPrecioDesde">Precio:</label>
             <input type="number" id="filtroPrecioDesde" min="0" class="small-input" aria-label="Precio mínimo">
-            <label for="filtroPrecioHasta" id="guion">-</label>
+            <label for="filtroPrecioHasta" id="guion"><b>-</b></label>
             <input type="number" id="filtroPrecioHasta" min="0" class="small-input" aria-label="Precio máximo">            
         </div>
 
@@ -179,7 +179,7 @@
         <div class="filtro-precio">
             <label for="filtroSuperficieDesde">Superficie:</label>
             <input type="number" id="filtroSuperficieDesde" min="0" class="small-input" aria-label="Superficie Minima">
-            <label for="filtroSuperficieHasta" id="guion">-</label>
+            <label for="filtroSuperficieHasta" id="guion"><b>-</b></label>
             <input type="number" id="filtroSuperficieHasta" min="0" class="small-input" aria-label="Superficie Maxima">
         </div>       
     </div>
