--- a/calculadora.html
+++ b/calculadora.html
@@ -67,7 +67,7 @@
     <section class="about section-padding text-center"> <!-- Añadida la clase text-center -->
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-12 col-12 mx-auto mt-5"> <!-- Cambiado ps-lg-5 a mx-auto -->
+                <div class="col-lg-8 col-md-12 col-12 mx-auto mt-5"> 
                     <div class="about-text text-white mt-5">
                         <h2 tabindex="0">Calculadora de hipoteca</h2>
                         <p tabindex="0">Con nuestra calculadora de hipoteca podrás realizar una estimación del coste
@@ -91,8 +91,7 @@
                             <div class="card text-white text-center bg-dark pb-2">
                                 <div class="card-body">
                                     <i class="bi bi-house-door-fill"></i>
-                                    <h3 id="valor-hipotecario-titulo" class="card-title" tabindex="0">Valor hipotecario
-                                    </h3>
+                                    <h3 id="valor-hipotecario-titulo" class="card-title" tabindex="0">Valor hipotecario</h3>
                                 </div>
                             </div>
                         </div>
@@ -132,12 +131,11 @@
     <div id="modal" class="modal">
         <!-- Contenido del modal -->
         <div class="modal-content">
-            <button class="close" onclick="closeModal()" aria-label="Cerrar ventana">×</button>
-            <p id="modal-content-paragraph" tabindex="0"></p>
+            <p id="modal-content-paragraph"></p> <!-- Elimina tabindex del texto de la explicación -->
+            <button class="close" onclick="closeModal()" aria-label="Cerrar ventana" tabindex="7">×</button>
         </div>
     </div>
 
-    
             <!--BOTÓN AYUDA-->
             <button class="help-button" onclick="toggleHelp()">
                 <span class="help-icon">?</span>
