Gestión de errores de calculadora

--- a/calculadora.html
+++ b/calculadora.html
@@ -16,7 +16,6 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <!--iconos bootstrap-->
-   
 
     <link rel="stylesheet" href="css/calculadora.css">
 
@@ -28,46 +27,38 @@
     <!--------------------------------NAVEGACION-------------------------------------------------->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-
         <div class="container">
             <a href="index.html" class="navbar-brand"> <span class="text-primary">Málaga</span>DreamHome</a>
-
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS" aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarS"
+                aria-controls="navbarS" aria-expanded="false" aria-label="Botón navegación">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarS">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a href="index.html" class="nav-link">Inicio</a>
                     </li>
-
                     <li class="nav-item">
                         <a href="#" class="nav-link active" aria-current="page">Calcula tu hipoteca</a>
                     </li>
-
                     <li class="nav-item">
                         <a href="sobreNosotros.html" class="nav-link">Sobre Nosotros</a>
                     </li>
-
                     <li class="nav-item">
                         <a href="gestionaPropiedad.html" class="nav-link">Gestiona tu propiedad</a>
                     </li>
                 </ul>
             </div>
-
         </div>
-
     </nav>
-
 
     <!---------------------------------------------------------------------------------->
     <!--------------------------------TITULO-------------------------------------------------->
 
-    <section class="about section-padding text-center"> <!-- Añadida la clase text-center -->
+    <section class="about section-padding text-center">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8 col-md-12 col-12 mx-auto mt-5"> 
+                <div class="col-lg-8 col-md-12 col-12 mx-auto mt-5">
                     <div class="about-text text-white mt-5">
                         <h2 tabindex="0">Calculadora de hipoteca</h2>
                         <p tabindex="0">Con nuestra calculadora de hipoteca podrás realizar una estimación del coste
@@ -86,8 +77,8 @@
         <div class="row justify-content-center">
             <div class="col-md-10">
                 <section class="services section-padding">
-                    <div class="row justify-content-center"> <!-- Nueva fila -->
-                        <div class="col-md-4 col-lg-6 mb-4 mt-5"> <!-- Modificación del ancho -->
+                    <div class="row justify-content-center">
+                        <div class="col-md-4 col-lg-6 mb-4 mt-5">
                             <div class="card text-white text-center bg-dark pb-2">
                                 <div class="card-body">
                                     <i class="bi bi-house-door-fill"></i>
@@ -95,7 +86,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-lg-6 mb-4 mt-5"> <!-- Modificación del ancho -->
+                        <div class="col-md-4 col-lg-6 mb-4 mt-5">
                             <div class="card text-white text-center bg-dark pb-2">
                                 <div class="card-body">
                                     <i class="bi bi-cash-coin"></i>
@@ -104,8 +95,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-center"> <!-- Nueva fila -->
-                        <div class="col-md-4 col-lg-6 mb-4 mt-5 mb-5"> <!-- Modificación del ancho -->
+                    <div class="row justify-content-center">
+                        <div class="col-md-4 col-lg-6 mb-4 mt-5 mb-5">
                             <div class="card text-white text-center bg-dark pb-2">
                                 <div class="card-body">
                                     <i class="bi bi-calendar2-check-fill"></i>
@@ -113,7 +104,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-lg-6 mb-4 mt-5 mb-5"> <!-- Modificación del ancho -->
+                        <div class="col-md-4 col-lg-6 mb-4 mt-5 mb-5">
                             <div class="card text-white text-center bg-dark pb-2">
                                 <div class="card-body">
                                     <i class="bi bi-graph-up-arrow"></i>
@@ -131,22 +122,21 @@
     <div id="modal" class="modal">
         <!-- Contenido del modal -->
         <div class="modal-content">
-            <p id="modal-content-paragraph"></p> <!-- Elimina tabindex del texto de la explicación -->
+            <p id="modal-content-paragraph"></p>
             <button class="close" onclick="closeModal()" aria-label="Cerrar ventana" tabindex="7">×</button>
         </div>
     </div>
 
-            <!--BOTÓN AYUDA-->
-            <button class="help-button" onclick="toggleHelp()">
-                <span class="help-icon">?</span>
-              </button>
-              
-              <!-- Contenido de ayuda -->
-              <div class="help-content" id="helpContent" tabindex="0">
-                <p>Todos los campos con el símbolo '*' son obligatorios.Vuelva a  pulsar el Botón,si quiere cerrar el desplegable</p>
-              </div>
-            <!--FIN BOTÓN AYUDA-->
+    <!--BOTÓN AYUDA-->
+    <button class="help-button" onclick="toggleHelp()" aria-expanded="false">
+        <span class="help-icon">?</span>
+    </button>
     
+    <!-- Contenido de ayuda -->
+    <div class="help-content" id="helpContent" tabindex="0" aria-live="polite">
+        <p>Todos los campos con el símbolo '*' son obligatorios. Vuelva a pulsar el botón si desea cerrar el desplegable.</p>
+    </div>
+    <!--Fin BOTÓN AYUDA !-->
 
 
     <!---------------------------------------------------------------------------------->
@@ -155,51 +145,51 @@
     <section class="calculator section-padding mt-5">
         <div class="container">
             <div class="row justify-content-center">
-                <!-- Columna de la calculadora -->
                 <div class="col-lg-6 col-md-12 col-12 px-lg-4">
                     <div class="about-text text-white">
                         <h2>Calculadora de Hipoteca</h2>
-                        <form id="hipoteca-form">
+                        <form id="hipoteca-form" novalidate>
                             <div class="mb-3">
                                 <label for="value" class="form-label">Valor hipotecario en euros <span class="text-danger">*</span></label>
                                 <input type="number" class="form-control form-control-sm input-short" id="value" aria-label="Valor hipotecario" required>
+                                <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese un valor hipotecario válido.</div>
                             </div>
                             <div class="mb-3">
                                 <label for="savings" class="form-label">Ahorro aportado en euros <span class="text-danger">*</span></label>
                                 <input type="number" class="form-control form-control-sm input-short" id="savings" aria-label="Ahorro aportado" required>
+                                <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese un ahorro aportado válido, menor que el valor hipotecario.</div>
                             </div>
                             <div class="mb-3">
                                 <label for="years" class="form-label">Plazo en años <span class="text-danger">*</span></label>
                                 <input type="number" class="form-control form-control-sm input-short" id="years" aria-label="Plazo en años" required>
+                                <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese un plazo en años válido.</div>
                             </div>
                             <div class="mb-3">
                                 <label for="interest" class="form-label">Interés en porcentaje <span class="text-danger">*</span></label>
                                 <input type="number" class="form-control form-control-sm input-short" id="interest" aria-label="Interés en porcentaje" required>
+                                <div class="invalid-feedback" aria-live="polite">Error: Por favor, ingrese un interés válido.</div>
                             </div>
                             <button type="submit" class="btn btn-primary">Calcular</button>
                         </form>
                     </div>
                 </div>
-                <!-- Columna del resultado de la hipoteca -->
                 <div class="col-lg-6 col-md-12 col-12 mt-5 px-lg-4">
-                    <div id="contenedor-resultado" class="result-box text-white" role="region"
-                        tabindex="0" aria-live="polite"
-                        aria-atomic="true">
-                        <div id="resultado-hipoteca" aria-live="polite" aria-atomic="true"></div>
-                        <div id="cuota-mensual" aria-live="polite" aria-atomic="true"></div>
+                    <div id="contenedor-resultado" class="result-box text-white" role="region" tabindex="0" aria-live="polite" aria-atomic="true">
+                        <div id="resultado-hipoteca" aria-live="polite" aria-atomic="true">
+                            <!-- Aquí se mostrará el resultado de la hipoteca -->
+                        </div>
+                        <div id="cuota-mensual" aria-live="polite" aria-atomic="true">
+                            <!-- Aquí se mostrará la cuota mensual -->
+                        </div>
                     </div>
                 </div>
-
-
-
-
             </div>
         </div>
     </section>
 
-   
+
     <!---------------------------------------------------------------------------------->
-    <!--------------------------------FOOTER-------------------------------------------------->
+    <!--------------------------------PIE DE PAGINA-------------------------------------------------->
 
     <footer class="pie-pagina pie-pagina-dark bg-dark mt-5">
         <div class="grupo-1">
@@ -228,18 +218,12 @@
         </div>
     </footer>
 
-
-    <!---------------------------------------------------------------------------------->
-    <!---------------------------------------------------------------------------------->
-
-
-    <!-- All Js -->
-    <!-- All Js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <!--JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-wH8mDxBQCLun8iArFG65U9Yvvq0ftlSy8m/EoI3F2ElENFkrUMUow1zo/1p17nN2"
+        crossorigin="anonymous"></script>
     <script src="js/calculadora.js"></script>
+    <script src="js/funcionalidad.js"></script>
 
 </body>
 
