--- a/calculadora.html
+++ b/calculadora.html
@@ -219,11 +219,10 @@
     </footer>
 
     <!--JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-wH8mDxBQCLun8iArFG65U9Yvvq0ftlSy8m/EoI3F2ElENFkrUMUow1zo/1p17nN2"
-        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script src="js/calculadora.js"></script>
-    <script src="js/funcionalidad.js"></script>
 
 </body>
 
