--- a/detalle_piso.html
+++ b/detalle_piso.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <div class="container mt-5 text-white">
-        <h1 tabindex="0">Detalles del Piso</h1>
+        <h1 tabindex="0">Detalles del Inmueble </h1>
         <div id="detallePisoContainer" class="row">
             <!-- Aquí se llenará la información del piso -->
         </div>
