retoque 'cualquiera' usabilidad

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="filtrotipo">
             <label for="filtroTipo">Tipo de inmueble:</label>
             <select id="filtroTipo" class="small-input">
-                <option value="cualquiera">Cualquiera</option>
+                <option value="cualquiera">Tipo de inmueble</option>
                 <option value="Piso">Piso</option>
                 <option value="Apartamento">Apartamento</option>
                 <option value="Casa">Casa</option>
@@ -124,7 +124,7 @@
         <div class="filtroop">
             <label for="filtroOperacion">Operación:</label>
             <select id="filtroOperacion" class="small-input">
-                <option value="cualquiera">Cualquiera</option>
+                <option value="cualquiera">Operación</option>
                 <option value="compra">Compra</option>
                 <option value="alquiler">Alquiler</option>
                 <option value="ambos">Ambos</option>
@@ -141,7 +141,7 @@
         <div class="filtromuni">
             <label for="filtroMunicipio">Municipio:</label>
             <select id="filtroMunicipio" class="small-input">
-                <option value="cualquiera">Cualquiera</option>
+                <option value="cualquiera">Municipio</option>
                 <option value="Benalmádena">Benalmádena</option>
                 <option value="Estepona">Estepona</option>
                 <option value="Fuengirola">Fuengirola</option>
@@ -154,13 +154,13 @@
         <div class="filtrodistrito">
             <label for="filtroDistrito">Distrito (escoja primero un municipio):</label>
             <select id="filtroDistrito" class="small-input">
-                <option value="cualquiera">Cualquiera</option>
+                <option value="cualquiera">Distrito</option>
             </select>
         </div>
         <div class="filtroestado">
             <label for="filtroEstado">Estado del inmueble:</label>
             <select id="filtroEstado" class="small-input">
-                <option value="cualquiera">Cualquiera</option>
+                <option value="cualquiera">Estado del inmueble</option>
                 <option value="regular">Regular o mejor</option>
                 <option value="buen">Bien o mejor</option>
                 <option value="excelente">Excelente</option>
